test_compiler/errors/e09.gm
Procedure foo()
{
    Int x;
    Bool y;
    Graph G;
    Node(G) n;

    y = (x == y);
    y = (x == G);
    y = (x == n);
}
